--- a/package.json
+++ b/package.json
@@ -173,6 +173,6 @@
     "start": "npm-run-all -lpr serve watch onchange remixd",
     "test": "npm run csslint; standard && node test/index.js",
     "test-browser": "npm-run-all -lpr selenium downloadsolc_root make-mock-compiler serve browsertest",
-    "watch": "watchify src/index.js -dv -p browserify-reload -o build/app.js"
+    "watch": "watchify src/index.js -dv -p browserify-reload -o build/app.js --exclude solc"
   }
 }
